--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "devDependencies": {
     "prettier": "^1.19.1",
     "prettier-airbnb-config": "^1.0.0"
+  },
+  "dependencies": {
+    "prompt-sync": "^4.2.0"
   }
 }
